--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+
+		<sonar.projectKey>workee_backend_empresa</sonar.projectKey>
+        <sonar.projectName>workee_backend_empresa</sonar.projectName>
+        <sonar.host.url>http://localhost:9000</sonar.host.url>
+        <sonar.token>sqp_8040a82de630aa20bea77d7d7117f2f2737a816f</sonar.token>
+        <sonar.maven.plugin.version>4.0.0.4121</sonar.maven.plugin.version>
+
 	</properties>
 	<dependencies>
 		<dependency>
@@ -98,6 +105,12 @@
 
 	<build>
 		<plugins>
+			<plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>${sonar.maven.plugin.version}</version>
+            </plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
