--- a/pom.xml
+++ b/pom.xml
@@ -78,11 +78,12 @@
 			<scope>test</scope>
 		</dependency> -->
 		<!-- TODO: ACTIVAR ESTOE DE ARRIBA CUANDO HAGAMOS LA PARTE DE SEGURIDAD -->
+
 		<dependency>
-			<groupId>jakarta.validation</groupId>
-			<artifactId>jakarta.validation-api</artifactId>
-			<version>3.0.2</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+
 		<!-- <dependency>
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
