Controllers + Correcciones Parametros

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=demo
 
-spring.datasource.url=${DATA_SOURCE}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/workee?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=juli4467
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 server.port=9090
