--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency> -->
+		</dependency>
 		<!-- TODO: ACTIVAR ESTOE DE ARRIBA CUANDO HAGAMOS LA PARTE DE SEGURIDAD -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -66,11 +66,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
-		</dependency> -->
+		</dependency>
 		<!-- TODO: ACTIVAR ESTOE DE ARRIBA CUANDO HAGAMOS LA PARTE DE SEGURIDAD -->
 
 		<dependency>
