--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
 jwt.secret=${JWT_SECRET_KEY}
+
+backup.mysql.database=${DB_NAME}
+backup.folder.path.win=${BACKUP_FOLDER_PATH}
+
+
