Si usuario se registra o se crea sin foto de perfil, se setea automaticamente

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -13,5 +13,10 @@
     "name": "backup.folder.path.win",
     "type": "java.lang.String",
     "description": "A description for 'backup.folder.path'"
+  },
+  {
+    "name": "firebase.storage.token",
+    "type": "java.lang.String",
+    "description": "A description for 'firebase.storage.token'"
   }
 ]}
