--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,6 @@ jwt.secret=${JWT_SECRET_KEY}
 backup.mysql.database=${DB_NAME}
 backup.folder.path.win=${BACKUP_FOLDER_PATH}
 
+firebase.storage.token=${FIREBASE_TOKEN}
+
 
