Agrego lo del S.O., ahora tiene en cuenta Linux y MAC

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -18,5 +18,10 @@
     "name": "firebase.storage.token",
     "type": "java.lang.String",
     "description": "A description for 'firebase.storage.token'"
+  },
+  {
+    "name": "backup.folder.path.linux",
+    "type": "java.lang.String",
+    "description": "A description for 'backup.folder.path.linux'"
   }
 ]}
