--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.mail.properties.mail.smtp.starttls.required=true
 jwt.secret=${JWT_SECRET_KEY}
 
 backup.mysql.database=${DB_NAME}
-backup.folder.path.win=${BACKUP_FOLDER_PATH}
+backup.folder.path.win=${BACKUP_FOLDER_PATH_WIN}
 
 firebase.storage.token=${FIREBASE_TOKEN}
 
